--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -25,25 +29,30 @@
     <main>
 
         <section>
-            <h1>Combine fine images</h1>
-            <p>To represent a product</p>
-            <article> <!-- Левая статья -->
+            <h1 class="main-title">Combine <span  class="main-title-fine">fine</span> images</h1>
+            <p class="section-description">To represent a product</p>
+            <article class="left-article"> <!-- Левая статья -->
                 <p>
                     Use mixed grid with imagery, replace with your own photos and descriptions
                 </p>
                 <a href="#">
                     <div>
+                        <p>
+                            <span class="left-column-title">We aimed to deliver HQ templates for Figma </span>
+                            Used by 123 people
+                        </p>
                         <!-- разноцветный блок -->
                     </div>
                 </a>
-                <button>Learn more</button>
+                <button class="left-article-button">Learn more</button>
             </article>
             <div>
 
 
-                <article><!-- Статьи по середине -->
+                <article class="main-article"><!-- Статьи по середине -->
                     <a href="#">
                         <div>
+                            <h2 class="article-main-title">Image Title</h2>
                             <!-- разноцветный блок -->
                         </div>
                     </a>
@@ -76,9 +85,10 @@
                         </div>
                     </a>
                 </article>
-                <article>
+                <article class="artical-caption">
                     <a href="#">
                         <div>
+                            <h3 class="article-buttom-caption">Caption</h3>
                             <!-- разноцветный блок -->
                         </div>
                     </a>
@@ -95,7 +105,7 @@
 
 
         <section>
-            <h2>
+            <h2 class="section-description">
                 Affordable pricing
             </h2>
             <p>
@@ -107,8 +117,8 @@
             </ul>
 
 
-            <div>
-                 <h3>Like a pussy</h3>
+            <div class="tariff-plan">
+                 <h3 class="tariff-plan-title">Like a pussy</h3>
                  <p><span>FREE</span>/forever</p>
                  <ul>
                     <li><span></span>Components-driven system</li>
@@ -121,10 +131,10 @@
             </div>
 
 
-            <div>
+            <div class="tariff-plan">
                 <div class="avatar">
                     <span></span>
-                    <h3>Individual</h3>
+                    <h3 class="tariff-plan-title">Individual</h3>
                     <span>best!</span>
                 </div>
                 <p><span>$24</span>/month</p>
@@ -145,10 +155,10 @@
            </div>
 
 
-           <div>
+           <div class="tariff-plan">
             <div class="corporate">
                 <span></span>
-                <h3>Corporate</h3>
+                <h3 class="tariff-plan-title">Corporate</h3>
             </div>
             <p><span>$12</span>/editor</p>
             <ul>
