--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 <body>
     <div class="container">
-        <!-- <div class="decor-rectangle"></div> -->
         <header class="main-header">
             <div class="container">
                 <img width="200px" height="64px" class="Logo" src="img/icon/icon.png" alt="logo">
@@ -25,14 +24,15 @@
                         <li class="nav-item"><a href="#">Contact us</a><span class="circle"></span></li>
                     </ul>
                 </nav>
-                <button>Sign in</button>
+                <div class="button-main-header"><button>Sign in</button></div>
             </div>
             <hr class="hr-line">
         </header>
     
         <span></span>
 
-        <main class="main">
+        <div class="main">
+            <div class="decor-rectangle"></div> 
 
             <section>
                 <div class="tittle-ps">
