--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <footer>
             <div>
-                <h3>Follow us</h3>
+                <h3>Follow us.</h3>
                 <ul>
                     <li><a href="#"><span></span></a></li>
                     <li><a href="#"><span></span></a></li>
