--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <footer>
             <div>
-                <h3>Follow us.</h3>
+                <h3 class="follow-us">Follow us</h3>
                 <ul>
                     <li><a href="#"><span></span></a></li>
                     <li><a href="#"><span></span></a></li>
@@ -287,7 +287,7 @@
                     <li><a href="#"><span></span></a></li>
                 </ul>
                 <div>
-                    <h3>Information</h3>
+                    <h3 class="bottom-information">Information</h3>
                     <div>
                         <ul>
                             <li>
@@ -330,12 +330,12 @@
             </div>
 
             <div>
-                <h3>follow us</h3>
-                <a href="mailto:hello@fapsterapp.com">hello@fapsterapp.com</a>
+                <h3 class="bottom-information">follow us</h3>
+                <a class="mail-contact" href="mailto:hello@fapsterapp.com">hello@fapsterapp.com</a>
             </div>
 
             <div>
-                <h3>keep in touch</h3>
+                <h3 class="follow-us">keep in touch</h3>
                 <form action="#">
                     <div>
                         <p>
@@ -348,8 +348,9 @@
                         </p>
                         <p>
                         <span></span>
-                        <textarea name="message">Leave your message</textarea>
+                        <textarea name="message" class="leave-message">Leave your message</textarea>
                         </p>
+                        <button class="button-send-end">SEND</button>
                     </div>
                 </form>
             </div>
